--- a/document/02-アーキテクチャ設計.md
+++ b/document/02-アーキテクチャ設計.md
@@ -1,6 +1,6 @@
 # 02 - アーキテクチャ設計
 
-> [[01-MVP概要と機能]] | [[BondPoint設計書]] | Next: [[03-技術スタック]]
+> [[01-MVP概要と機能]] | [[spotMe設計書]] | Next: [[03-技術スタック]]
 
 ## 🏗️ GCP サーバーレス アーキテクチャ
 
@@ -114,8 +114,8 @@ events/{eventId}/
 
 | バケット名 | 用途 | ストレージクラス |
 |------------|------|------------------|
-| `bondpoint-user-images` | プロフィール画像 | Standard |
-| `bondpoint-event-images` | イベント画像 | Standard |
+| `spotMe-user-images` | プロフィール画像 | Standard |
+| `spotMe-event-images` | イベント画像 | Standard |
 
 **ライフサイクル管理**:
 - **90日後**: Coldline ストレージに移行
