--- a/document/03-技術スタック.md
+++ b/document/03-技術スタック.md
@@ -1,6 +1,6 @@
 # 03 - 技術スタック
 
-> [[02-アーキテクチャ設計]] | [[BondPoint設計書]] | Next: [[04-データベース設計]]
+> [[02-アーキテクチャ設計]] | [[spotMe設計書]] | Next: [[04-データベース設計]]
 
 ## 🛠️ 技術スタック（最新版 2025年）
 
