--- a/document/04-データベース設計.md
+++ b/document/04-データベース設計.md
@@ -1,6 +1,6 @@
 # 04 - データベース設計
 
-> [[03-技術スタック]] | [[BondPoint設計書]] | Next: [[05-ステータス管理機能]]
+> [[03-技術スタック]] | [[spotMe設計書]] | Next: [[05-ステータス管理機能]]
 
 ## 🗄️ ハイブリッドデータベース構成
 
