--- a/document/05-ステータス管理機能.md
+++ b/document/05-ステータス管理機能.md
@@ -1,10 +1,10 @@
 # 05 - ステータス管理機能
 
-> [[04-データベース設計]] | [[BondPoint設計書]] | Next: [[06-API設計]]
+> [[04-データベース設計]] | [[spotMe設計書]] | Next: [[06-API設計]]
 
 ## ⭐ コア機能：詳細ステータス管理
 
-**BondPoint の最大の差別化要素**である詳細ステータス管理機能の設計詳細。従来の「◯時に◯◯で」という曖昧な待ち合わせを、**8段階の詳細ステータス**でリアルタイム管理。
+**spotMe の最大の差別化要素**である詳細ステータス管理機能の設計詳細。従来の「◯時に◯◯で」という曖昧な待ち合わせを、**8段階の詳細ステータス**でリアルタイム管理。
 
 ---
 
