--- a/document/08-品質保証とテスト.md
+++ b/document/08-品質保証とテスト.md
@@ -1,6 +1,6 @@
 # 08 - 品質保証とテスト
 
-> [[07-UI-UX設計]] | [[BondPoint設計書]] | Next: [[09-セキュリティとプライバシー]]
+> [[07-UI-UX設計]] | [[spotMe設計書]] | Next: [[09-セキュリティとプライバシー]]
 
 ## 🧪 テスト戦略
 
@@ -155,7 +155,7 @@ class TestDatabaseIntegration:
 ```python
 from locust import HttpUser, task, between
 
-class BondPointUser(HttpUser):
+class spotMeUser(HttpUser):
     wait_time = between(1, 3)
     
     def on_start(self):
@@ -422,7 +422,7 @@ jobs:
     
     - name: Deploy to Cloud Run (Staging)
       run: |
-        gcloud run deploy bondpoint-api-staging \
+        gcloud run deploy spotMe-api-staging \
           --source . \
           --region asia-northeast1 \
           --project ${{ secrets.GCP_PROJECT_ID }}
@@ -456,8 +456,8 @@ jobs:
 #### SonarQube設定
 ```properties
 # sonar-project.properties
-sonar.projectKey=bondpoint
-sonar.projectName=BondPoint
+sonar.projectKey=spotMe
+sonar.projectName=spotMe
 sonar.projectVersion=1.0
 
 # Python設定
