--- a/document/09-セキュリティとプライバシー.md
+++ b/document/09-セキュリティとプライバシー.md
@@ -1,6 +1,6 @@
 # 09 - セキュリティとプライバシー
 
-> [[08-品質保証とテスト]] | [[BondPoint設計書]] | Next: [[10-監視と運用]]
+> [[08-品質保証とテスト]] | [[spotMe設計書]] | Next: [[10-監視と運用]]
 
 ## 🔐 セキュリティ設計
 
@@ -53,9 +53,9 @@
 #### Access Token
 ```json
 {
-  "iss": "bondpoint.com",
+  "iss": "spotMe.com",
   "sub": "123e4567-e89b-12d3-a456-426614174000",
-  "aud": "bondpoint-mobile",
+  "aud": "spotMe-mobile",
   "exp": 1640995200,
   "iat": 1640991600,
   "nbf": 1640991600,
@@ -69,7 +69,7 @@
 #### Refresh Token
 ```json
 {
-  "iss": "bondpoint.com",
+  "iss": "spotMe.com",
   "sub": "123e4567-e89b-12d3-a456-426614174000",
   "exp": 1643587200,
   "token_type": "refresh"
@@ -95,9 +95,9 @@ class JWTManager:
     def create_access_token(self, user_id: str, phone_number: str) -> str:
         """アクセストークン生成（有効期限1時間）"""
         payload = {
-            "iss": "bondpoint.com",
+            "iss": "spotMe.com",
             "sub": user_id,
-            "aud": "bondpoint-mobile",
+            "aud": "spotMe-mobile",
             "exp": datetime.utcnow() + timedelta(hours=1),
             "iat": datetime.utcnow(),
             "user_id": user_id,
@@ -113,8 +113,8 @@ class JWTManager:
                 token,
                 self.public_key,
                 algorithms=["RS256"],
-                audience="bondpoint-mobile",
-                issuer="bondpoint.com"
+                audience="spotMe-mobile",
+                issuer="spotMe.com"
             )
             return payload
         except jwt.ExpiredSignatureError:
@@ -473,7 +473,7 @@ class DataMinimization:
   "action": "login_success",
   "user_id": "123e4567-e89b-12d3-a456-426614174000",
   "ip_address": "203.0.113.1",
-  "user_agent": "BondPoint/1.0 (iOS 17.1)",
+  "user_agent": "spotMe/1.0 (iOS 17.1)",
   "resource": "/api/v1/auth/login",
   "result": "success",
   "metadata": {
