--- a/document/10-監視と運用.md
+++ b/document/10-監視と運用.md
@@ -1,6 +1,6 @@
 # 10 - 監視と運用
 
-> [[09-セキュリティとプライバシー]] | [[BondPoint設計書]] | Next: [[11-開発スケジュール]]
+> [[09-セキュリティとプライバシー]] | [[spotMe設計書]] | Next: [[11-開発スケジュール]]
 
 ## 📊 監視戦略
 
@@ -57,23 +57,23 @@ import time
 
 # カスタムメトリクス定義
 status_updates_total = Counter(
-    'bondpoint_status_updates_total',
+    'spotMe_status_updates_total',
     'Total number of status updates',
     ['status_type', 'user_id']
 )
 
 status_update_duration = Histogram(
-    'bondpoint_status_update_duration_seconds',
+    'spotMe_status_update_duration_seconds',
     'Time spent processing status updates'
 )
 
 active_users = Gauge(
-    'bondpoint_active_users',
+    'spotMe_active_users',
     'Number of currently active users'
 )
 
 firestore_sync_errors = Counter(
-    'bondpoint_firestore_sync_errors_total',
+    'spotMe_firestore_sync_errors_total',
     'Total number of Firestore sync errors'
 )
 
@@ -284,7 +284,7 @@ class StructuredLogger:
         )
 
 # 使用例
-logger = StructuredLogger("bondpoint-api")
+logger = StructuredLogger("spotMe-api")
 
 async def update_user_status(event_id: str, user_id: str, status_data: dict):
     trace_id = generate_trace_id()
@@ -327,7 +327,7 @@ SELECT
     ),
     MILLISECOND
   ) as update_interval_ms
-FROM `bondpoint.logs.cloudrun`
+FROM `spotMe.logs.cloudrun`
 WHERE
   DATE(timestamp) = CURRENT_DATE()
   AND JSON_EXTRACT_SCALAR(jsonPayload, '$.operation') = 'status_update'
@@ -340,7 +340,7 @@ SELECT
   COUNT(*) as total_requests,
   COUNTIF(severity = 'ERROR') as error_count,
   ROUND(COUNTIF(severity = 'ERROR') / COUNT(*) * 100, 2) as error_rate_percent
-FROM `bondpoint.logs.cloudrun`
+FROM `spotMe.logs.cloudrun`
 WHERE
   DATE(timestamp) >= DATE_SUB(CURRENT_DATE(), INTERVAL 7 DAY)
 GROUP BY date
@@ -359,7 +359,7 @@ SELECT
     timestamp,
     SECOND
   )), 2) as avg_duration_seconds
-FROM `bondpoint.logs.cloudrun`
+FROM `spotMe.logs.cloudrun`
 WHERE
   DATE(timestamp) = CURRENT_DATE()
   AND JSON_EXTRACT_SCALAR(jsonPayload, '$.operation') = 'status_update'
@@ -394,7 +394,7 @@ api_error_rate:
     duration: 300s
   notification:
     - slack-channel: "#alerts"
-    - email: "dev-team@bondpoint.com"
+    - email: "dev-team@spotMe.com"
 
 status_update_latency:
   condition:
@@ -413,7 +413,7 @@ firestore_sync_errors:
   severity: "critical"
   notification:
     - slack-channel: "#alerts"
-    - email: "oncall@bondpoint.com"
+    - email: "oncall@spotMe.com"
     - sms: "+81-80-1234-5678"
 ```
 
@@ -611,9 +611,9 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'bondpoint-api-green'
+      - 'spotMe-api-green'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/bondpoint-api:$COMMIT_SHA'
+      - 'gcr.io/$PROJECT_ID/spotMe-api:$COMMIT_SHA'
       - '--region'
       - 'asia-northeast1'
       - '--no-traffic'
@@ -622,7 +622,7 @@ steps:
   - name: 'gcr.io/cloud-builders/curl'
     args:
       - '-f'
-      - 'https://bondpoint-api-green-xyz.a.run.app/health'
+      - 'https://spotMe-api-green-xyz.a.run.app/health'
 
   # 3. スモークテスト
   - name: 'gcr.io/cloud-builders/gcloud'
@@ -631,7 +631,7 @@ steps:
       - '-c'
       - |
         # API動作確認
-        response=$(curl -s https://bondpoint-api-green-xyz.a.run.app/api/v1/health)
+        response=$(curl -s https://spotMe-api-green-xyz.a.run.app/api/v1/health)
         if [[ "$response" != *"healthy"* ]]; then
           echo "Health check failed"
           exit 1
@@ -643,9 +643,9 @@ steps:
       - 'run'
       - 'services'
       - 'update-traffic'
-      - 'bondpoint-api'
+      - 'spotMe-api'
       - '--to-revisions'
-      - 'bondpoint-api-green=10'
+      - 'spotMe-api-green=10'
       - '--region'
       - 'asia-northeast1'
 
@@ -661,7 +661,7 @@ steps:
         if (( $(echo "$error_rate > 0.01" | bc -l) )); then
           echo "Error rate too high: $error_rate"
           # ロールバック
-          gcloud run services update-traffic bondpoint-api --to-revisions bondpoint-api-blue=100
+          gcloud run services update-traffic spotMe-api --to-revisions spotMe-api-blue=100
           exit 1
         fi
 
@@ -671,9 +671,9 @@ steps:
       - 'run'
       - 'services'
       - 'update-traffic'
-      - 'bondpoint-api'
+      - 'spotMe-api'
       - '--to-revisions'
-      - 'bondpoint-api-green=100'
+      - 'spotMe-api-green=100'
 ```
 
 ### バックアップ・復旧
@@ -687,9 +687,9 @@ steps:
 set -e
 
 # 変数設定
-PROJECT_ID="bondpoint-prod"
-DB_INSTANCE="bondpoint-db"
-BUCKET="bondpoint-backups"
+PROJECT_ID="spotMe-prod"
+DB_INSTANCE="spotMe-db"
+BUCKET="spotMe-backups"
 DATE=$(date +%Y%m%d_%H%M%S)
 
 echo "Starting backup at $(date)"
@@ -708,7 +708,7 @@ gcloud firestore export gs://$BUCKET/firestore/$DATE \
 
 # 3. Cloud Storage バックアップ
 echo "Backing up user data..."
-gsutil -m cp -r gs://bondpoint-user-images gs://$BUCKET/user-images/$DATE/
+gsutil -m cp -r gs://spotMe-user-images gs://$BUCKET/user-images/$DATE/
 
 # 4. Secret Manager バックアップ
 echo "Backing up secrets metadata..."
@@ -756,13 +756,13 @@ npm audit fix
 
 # 2. セキュリティパッチ適用
 echo "Applying security patches..."
-gcloud sql patches apply --patch=... --instance=bondpoint-db
+gcloud sql patches apply --patch=... --instance=spotMe-db
 
 # 3. データベース最適化
 echo "Optimizing database..."
 psql $DATABASE_URL << EOF
 VACUUM ANALYZE;
-REINDEX DATABASE bondpoint;
+REINDEX DATABASE spotMe;
 EOF
 
 # 4. 古いデータ削除
@@ -771,7 +771,7 @@ python scripts/cleanup_old_data.py
 
 # 5. パフォーマンステスト
 echo "Running performance tests..."
-locust --headless -u 100 -r 10 -t 300s --host=https://api.bondpoint.com
+locust --headless -u 100 -r 10 -t 300s --host=https://api.spotMe.com
 
 # 6. バックアップテスト
 echo "Testing backup restoration..."
@@ -779,7 +779,7 @@ echo "Testing backup restoration..."
 
 # 7. セキュリティスキャン
 echo "Running security scan..."
-nmap -sV api.bondpoint.com
+nmap -sV api.spotMe.com
 bandit -r app/
 
 echo "=== Maintenance completed ==="
