--- a/document/詳細設計書.md
+++ b/document/詳細設計書.md
@@ -107,7 +107,7 @@
 #### **Cloud Storage**
 
 - **役割**: ユーザー画像、イベント画像保存
-- **バケット**: bondpoint-user-images, bondpoint-event-images
+- **バケット**: spotMe-user-images, spotMe-event-images
 - **ストレージクラス**: Standard
 - **ライフサイクル**: 90日後にColdlineに移行
 
@@ -1146,4 +1146,4 @@ Production環境デプロイ
 
 ---
 
-**BondPoint MVP - 3ヶ月で実現する、スマートな集合管理アプリ**
+**spotMe MVP - 3ヶ月で実現する、スマートな集合管理アプリ**
