--- a/document/11-開発スケジュール.md
+++ b/document/11-開発スケジュール.md
@@ -1,6 +1,6 @@
 # 11 - 開発スケジュール
 
-> [[10-監視と運用]] | [[BondPoint設計書]] | Next: [[12-コストとスケーリング]]
+> [[10-監視と運用]] | [[spotMe設計書]] | Next: [[12-コストとスケーリング]]
 
 ## 📅 12週間開発計画
 
@@ -20,8 +20,8 @@
 - [x] **Day 1-2**: GCP プロジェクト作成・IAM設定
   ```bash
   # GCP プロジェクト作成
-  gcloud projects create bondpoint-mvp
-  gcloud config set project bondpoint-mvp
+  gcloud projects create spotMe-mvp
+  gcloud config set project spotMe-mvp
 
   # 必要API有効化
   gcloud services enable cloudsql.googleapis.com
@@ -32,7 +32,7 @@
 - [x] **Day 3-4**: Cloud SQL（PostgreSQL）セットアップ
   ```bash
   # Cloud SQL インスタンス作成
-  gcloud sql instances create bondpoint-db \
+  gcloud sql instances create spotMe-db \
     --database-version=POSTGRES_15 \
     --tier=db-f1-micro \
     --region=asia-northeast1
@@ -41,7 +41,7 @@
 - [x] **Day 5-7**: FastAPI プロジェクト構築
   ```python
   # プロジェクト構造
-  bondpoint-backend/
+  spotMe-backend/
   ├── app/
   │   ├── api/
   │   ├── models/
@@ -59,7 +59,7 @@
   npm install -g @react-native-community/cli
 
   # プロジェクト作成
-  npx react-native init BondPointApp --template react-native-template-typescript
+  npx react-native init spotMeApp --template react-native-template-typescript
   ```
 
 - [x] **Day 4-7**: 基本依存関係インストール・設定
@@ -461,7 +461,7 @@
 
 - [x] **Day 6-7**: 負荷テスト（Locust）
   ```python
-  class BondPointUser(HttpUser):
+  class spotMeUser(HttpUser):
       @task
       def update_status(self):
           self.client.post('/api/v1/events/test/status',
@@ -520,10 +520,10 @@
   # cloudbuild.yaml
   steps:
     - name: 'gcr.io/cloud-builders/docker'
-      args: ['build', '-t', 'gcr.io/$PROJECT_ID/bondpoint-api', '.']
+      args: ['build', '-t', 'gcr.io/$PROJECT_ID/spotMe-api', '.']
 
     - name: 'gcr.io/cloud-builders/gcloud'
-      args: ['run', 'deploy', 'bondpoint-api', '--image', 'gcr.io/$PROJECT_ID/bondpoint-api']
+      args: ['run', 'deploy', 'spotMe-api', '--image', 'gcr.io/$PROJECT_ID/spotMe-api']
   ```
 
 - [x] **Day 6-7**: 品質ゲート設定
@@ -636,7 +636,7 @@
 - [x] **Day 1-2**: TestFlight / Play Console ベータ配信
   ```bash
   # iOS ベータ配信
-  cd ios && xcodebuild -workspace BondPointApp.xcworkspace -scheme BondPointApp archive
+  cd ios && xcodebuild -workspace spotMeApp.xcworkspace -scheme spotMeApp archive
 
   # Android ベータ配信
   cd android && ./gradlew bundleRelease
@@ -657,8 +657,8 @@
 - [x] **Day 5-6**: 本番環境構築・設定
   ```bash
   # 本番環境デプロイ
-  gcloud run deploy bondpoint-api-prod \
-    --image gcr.io/bondpoint-prod/bondpoint-api:latest \
+  gcloud run deploy spotMe-api-prod \
+    --image gcr.io/spotMe-prod/spotMe-api:latest \
     --region asia-northeast1 \
     --min-instances 1 \
     --max-instances 100
